# marathon-notification-service

./: .gitignore  Dockerfile.api  Dockerfile.awslambda  README.md  config.py  docker-compose.yaml  ecs-push_to_ecr.sh  googlesheet_api.py  lambda-push_to_ecr.sh  main.py  pyproject.toml
awslambda/: notification_lambda.py
src/adapters/inbound/: address_manager.py  api.py  web_crawler.py
src/adapters/outbound/: notifications.py  repository.py
src/application/: notification_service.py  services.py  uow.py
src/domain/: models.py  repository.py
src/infrastructure/: database.py  models.py  uow.py
src/ports/: inbound.py  outbound.py
tests/: test_model.py  test_notification_lambda.py  test_repository.py  test_uow.py
